switched to new layout

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,20 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <title>UpVoc</title>
-    <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-    <!--[if IE]>
-        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-</head>
-<body>
-    <div class="content-holder group">
-            {{{body}}}
-    </div>
-    <script type="text/javascript" src="js/myapp.js"></script>
+	<meta charset="UTF-8">
+	<title>Upvoc</title>
+	<link href="/css/myapp.css" rel="stylesheet">
+	<meta name="viewport" content="width=device-width; initial-scale=1.0">
+	<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:700&subset=latin,cyrillic-ext,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lora&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
 (function (d, w, c) {
@@ -44,5 +38,373 @@
 </script>
 <noscript><div><img src="//mc.yandex.ru/watch/26600358" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
+</head>
+<body>
+<div id="pc-container">
+	<div class="background">
+	 <div class="main-header clearfix">
+		<div class="logo clearfix"><a href="#">upvoc
+			<p class="logo-p">improve your english vocabulary</p></a>
+		</div>
+		<div class="header">
+			<div class="top-section">
+				<div class="content">
+					<p class="soc-p">login via:</p>
+				<div class="soc-ic">
+					<a href="https://vk.com" class="ic vk-ic"></a>
+					<a href="https://www.facebook.com/" class="ic vk-fb"></a>
+					<a href="https://twitter.com/" class="ic vk-tw"></a>
+					<a href="ok.ru" class="ic vk-ok"></a>
+				</div>
+			</div>
+			</div>
+
+
+			<div class="bottom-section">
+				<ul class="menu">
+					<li><a href="#">world</a></li>
+					<li><a href="#">sport</a></li>
+					<li><a href="#">technology</a></li>
+					<li><a href="#">entertainment</a></li>
+					<li><a href="#">style</a></li>
+					<li><a href="#">travel</a></li>
+					<li><a href="#">money</a></li>
+				</ul>
+			</div>
+			</div>
+		</div>
+	</div>
+		<div class="middle-section clearfix">
+			<div class="settings-section clearfix">
+				<div class="settings-title">
+					<h3><a href="#">My Settings</a></h3>
+				</div>
+				<div class="settings-news">
+					<h4 class="news-title">News Sources</h4>
+					<div class="box">
+					<input type="checkbox" class="checkbox-settings" id="bbc">
+					<label for="bbc">BBC</label>
+					</div>
+					<div class="box">
+					<input type="checkbox" class="checkbox-settings" id="tech">
+					<label for="tech">TECHCRUNCH</label>
+					</div>
+					<div class="box">
+					<input type="checkbox" class="checkbox-settings" id="econom">
+					<label for="econom">Economist</label>
+					</div>
+					<div class="box">
+					<input type="checkbox" class="checkbox-settings" id="usatoday">
+					<label for="usatoday">USA Today</label>
+					</div>
+					<div class="box">
+					<input type="checkbox" class="checkbox-settings" id="forbes">
+					<label for="forbes">Forbes</label>
+					</div>
+					<div class="box">
+					<input type="checkbox" class="checkbox-settings" id="telegraph">
+					<label for="telegraph">Telegraph</label>
+					</div>
+
+				</div>
+				<div class="settings-lang-dif">
+					<h4>Languiage difficulty:</h4>
+					<div class="range-filter">
+						<div class="range-controls">
+							<div class="scale"><div class="bar"></div></div>
+							<input type="radio" id="slidedifficult1" name="check" class="checkbox-cust">
+							<label for="slidedifficult1" class="circle circle1"></label>
+							<input type="radio" id="slidedifficult2" name="check" class="checkbox-cust">
+							<label for="slidedifficult2" class="circle circle2"></label>
+							<input type="radio" id="slidedifficult3" name="check" class="checkbox-cust">
+							<label for="slidedifficult3" class="circle circle3"></label>
+							<span class="range-controls-hard">Hard</span>
+						</div>
+					</div>
+
+				</div>
+				<div class="settings-lang">
+					<h4><a href="#">Native language</a></h4>
+					<p class="lang">Russian</p>
+				</div>
+
+			</div>
+			<div class="center-content clearfix">
+				<div class="novelty">
+				<h2 class="name-news"><a href="#">Sling TV’s Web-Based Streaming Service Experienced
+Third Major Outage On Monday</a></h2>
+				<a href="#"><blockquote class="newsinform">techcrunch.com 30.6.2015</blockquote></a>
+				<p class="news"><span></span>The transition from traditional cable and satellite TV service to online streaming is not without its issues, as Dish’s Sling TV subscribers can attest to. The web-based streaming platform experienced a significant outage last night its third sizable outage to date which brought the service down for hours. The issue affected users across platforms, including web...</p>
+				<a href="" class="more-news">See more...</a>
+				</div>
+				<div class="novelty">
+				<h2 class="name-news"><a href="#">Sling TV’s Web-Based Streaming Service Experienced
+Third Major Outage On Monday</a></h2>
+				<a href="#"><blockquote class="newsinform">techcrunch.com 30.6.2015</blockquote></a>
+				<p class="news"><span></span>The transition from traditional cable and satellite TV service to online streaming is not without its issues, as Dish’s Sling TV subscribers can attest to. The web-based streaming platform experienced a significant outage last night its third sizable outage to date which brought the service down for hours. The issue affected users across platforms, including web...</p>
+				<a href="" class="more-news">See more...</a>
+				</div>
+				<div class="novelty">
+				<h2 class="name-news"><a href="#">Sling TV’s Web-Based Streaming Service Experienced
+Third Major Outage On Monday</a></h2>
+				<a href="#"><blockquote class="newsinform">techcrunch.com 30.6.2015</blockquote></a>
+				<p class="news"><span></span>The transition from traditional cable and satellite TV service to online streaming is not without its issues, as Dish’s Sling TV subscribers can attest to. The web-based streaming platform experienced a significant outage last night its third sizable outage to date which brought the service down for hours. The issue affected users across platforms, including web...</p>
+				<a href="" class="more-news">See more...</a>
+				</div>
+			</div>
+
+			<div class="dictionaries-section clearfix">
+				<div class="dict-title">
+					<h3><a href="#">MY DICTIONARIES</a></h3>
+				</div>
+
+				<div class="left-col-func">
+					<h5 class="left-title-save">Save words to</h5>
+					<h5 class="left-title-auto">Autosave</h5>
+					<h5 class="left-title-show">Show dictionary</h5>
+					<h5 class="left-title-word">Highlight words:</h5>
+				</div>
+				<div class="right-col-func">
+					<h5 class="dict-box dictboxer1">My main</h5>
+					<div class="slider-check">
+						<input type="checkbox" value="None" id="slideTwo" name="check" class="checkbox-cust" />
+						<label for="slideTwo"></label>
+					</div>
+					<h5 class="dict-box dictboxer2">My main</h5>
+					<div class="slider-check2">
+						<input type="checkbox" value="None" id="checkbox2" name="check" class="checkbox-cust" />
+						<label for="checkbox2"></label>
+					</div>
+
+
+				</div>
+				<div class="clearfix"></div>
+
+				<div class="sorting-block">
+					<h5 class="sorting-block-title">Sort by:</h5>
+					<p class="sortby">A-Z</p>
+
+					<p class="time">Time added</p>
+				</div>
+				<div class="clearfix"></div>
+				<div class="dictionary">
+					<div class="transcription-f">
+						<h5>transition [trænˈsɪʒən]</h5>
+						<h5>переход, перевод</h5>
+					</div>
+					<div class="transcription-f">
+						<h5>transition [trænˈsɪʒən]</h5>
+						<h5>переход, перевод</h5>
+					</div>
+					<div class="transcription-f">
+						<h5>transition [trænˈsɪʒən]</h5>
+						<h5>переход, перевод</h5>
+					</div>
+					<div class="transcription-f">
+						<h5>transition [trænˈsɪʒən]</h5>
+						<h5>переход, перевод</h5>
+					</div>
+					<div class="transcription">
+						<h5>traditional [trəˈdɪʃənl]</h5>
+						<h5>традиционный</h5>
+					</div>
+					<div class="transcription">
+						<h5>cable [keɪbl]</h5>
+						<h5>кабель</h5>
+					</div>
+					<div class="transcription">
+						<h5>satellite [ˈsætəlaɪt]</h5>
+						<h5>спутник</h5>
+					</div>
+					<div class="transcription">
+						<h5>service [ˈsɜːvɪs]</h5>
+						<h5>сервис</h5>
+					</div>
+					<div class="transcription">
+						<h5>transition [trænˈsɪʒən]</h5>
+						<h5>переход, перевод</h5>
+					</div>
+					<div class="transcription">
+						<h5>traditional [trəˈdɪʃənl]</h5>
+						<h5>традиционный</h5>
+					</div>
+				</div>
+
+			</div>
+			</div>
+</div>
+
+
+	<div id="wrapper">
+		<header class="main-head">
+			<div class="top-section-m clearfix">
+				<a href="#"><p class="upvoc">Upvoc</p></a>
+				<a href="#"><p class="login-m">Login</p></a>
+				<a href="#"><p class="my-lang">My Language: <select class='switch-lang'><option value="1">RUS</option>
+				<option value="2">ENG</option>
+				<option value="3">GRE</option>
+				<option value="4">TUR</option>
+				<option value="5">SPA</option></p></select></a>
+			</div>
+			<div class="bottom-section-m">
+				<ul>
+					<a href="#"><li>World</li></a>
+					<a href="#"><li>Sport</li></a>
+					<a href="#"><li>Finance</li></a>
+					<a href="#"><li>Technology</li></a>
+
+				</ul>
+
+			</div>
+			<div class="clearfix"></div>
+		<div class="mobile-form">
+			<a href="#" class="button-google-m">Continue with Google</a>
+			<a href="#" class="button-facebook-m">Continue with Facebook</a>
+			<a href="#" class="button-twitter-m">Continue with Twitter</a>
+			<form action="" class="login-form-mobile-inputs">
+			<input type="text" placeholder='Login'>
+			<div class="position-checkbox">
+			<input type="checkbox" class="login-checkbox-m" checked><span class='remember'>Remember me</span></div>
+			<input type="text" placeholder='Password'>
+		</form>
+		<a href="#" class="forgotpass">Forgot password?</a>
+		<a href="#"><p class="enter-login">Enter</p></a>
+
+			<a href="#" class="login-link">Login</a>
+			<a href="#" class="registration-link">Registration</a>
+		</div>
+		<div class="mobile-form-registration">
+			<h4 class="registration-title">Registration:</h4>
+			<form action="" class="registration">
+				<input type="text" placeholder='Full Name'>
+				<input type="text" placeholder='Email'>
+				<input type="password" placeholder='Password'>
+			</form>
+			<h4 class="button-registr">Done</h4>
+		</div>
+
+		</header>
+		<div class="translate-line clearfix">
+				<div class="titlebox-m">
+					<p class="advice">Tip of the Day:</p>
+				</div>
+				<div class="allocation-m">
+					<p class="word">Выделите слово и увидите его перевод</p>
+				</div>
+				<div class="close">123</div>
+
+
+		</div>
+		<div class="menu-button"><p class="open-menu"><span class="after-m">Open menu</span></p></div>
+		<div class="content">
+
+		<div class="mobile-panel">
+			<div class="titles-m">
+				<div class="panel-title-container">
+					<div class="news-sources-m">News Sources</div><select name="news-sour" id="" class="news-filter"><option>All</option></select>
+					<h4 class="mobile-panel-title">Language difficulty:</h4>
+				<div class="range-filter-m">
+						<div class="range-controls-m">
+							<div class="scale"><div class="bar"></div></div>
+							<input type="radio" id="slidedifficult1-m" name="check" class="checkbox-cust">
+							<label for="slidedifficult1-m" class="circle circle1"></label>
+							<input type="radio" id="slidedifficult2-m" name="check" class="checkbox-cust">
+							<label for="slidedifficult2-m" class="circle circle2"></label>
+							<input type="radio" id="slidedifficult3-m" name="check" class="checkbox-cust">
+							<label for="slidedifficult3-m" class="circle circle3"></label>
+							<span class="range-controls-hard">Hard</span>
+						</div>
+				</div>
+				</div>
+				<div class="savewords">
+					<h5 class="left-title-save mobile-save">Save words to</h5>
+					<h5 class="dict-box dictboxer1 mobile-dict">My main</h5>
+					<div class="sliders-section">
+					<h5 class="left-title-auto-m">Autosave:</h5>
+					<div class="slider-check mobile-slider2">
+							<input type="checkbox" value="None" id="slide-mobile1" name="check" class="checkbox-cust" />
+							<label for="slide-mobile1"></label>
+					</div>
+					<h5 class="left-title-word-m">Highlight words:</h5>
+					<div class="slider-check mobile-slider1">
+							<input type="checkbox" value="None" id="slide-mobile2" name="check" class="checkbox-cust" />
+							<label for="slide-mobile2"></label>
+					</div>
+
+				</div>
+
+				</div>
+
+
+				<div class="sorting-block clearfix">
+					<h5 class="sorting-block-title">Sort by:</h5>
+					<h5 class="sortby">A-Z</h5>
+
+					<h5 class="time">Time added</h5>
+				</div>
+				<div class="dictionary-m">
+					<div class="transcription-f-m">
+						<h5>word:</h5>
+						<h5>[trænˈsɪʒən]</h5>
+						<h5>переход, перевод</h5>
+					</div>
+					<div class="transcription-f-m">
+						<h5>word:</h5>
+						<h5>[trænˈsɪʒən]</h5>
+						<h5>переход, перевод</h5>
+					</div>
+					<div class="transcription-f-m">
+						<h5>word:</h5>
+						<h5>[trænˈsɪʒən]</h5>
+						<h5>переход, перевод</h5>
+					</div>
+					<div class="transcription-f-m">
+						<h5>word:</h5>
+						<h5>[trænˈsɪʒən]</h5>
+						<h5>переход, перевод</h5>
+					</div>
+					<div class="transcription-f-m">
+						<h5>word:</h5>
+						<h5>[trænˈsɪʒən]</h5>
+						<h5>переход, перевод</h5>
+					</div>
+				</div>
+
+			</div>
+		</div>
+
+			<div class="novelty">
+				<h2 class="name-news-m"><a href="#">Sling TV’s Web-Based Streaming Service Experienced
+Third Major Outage On Monday</a></h2>
+				<a href="#"><blockquote class="newsinform">techcrunch.com 30.6.2015</blockquote></a>
+				<p class="news"><span></span>The transition from traditional cable and satellite TV service to online streaming is not without its issues, as Dish’s Sling TV subscribers can attest to. The web-based streaming platform experienced a significant outage last night its third sizable outage to date which brought the service down for hours. The issue affected users across platforms, including web...</p>
+				<a href="" class="more-news">See more...</a>
+				</div>
+
+		<div class="novelty">
+				<h2 class="name-news-m"><a href="#">Sling TV’s Web-Based Streaming Service Experienced
+Third Major Outage On Monday</a></h2>
+				<a href="#"><blockquote class="newsinform">techcrunch.com 30.6.2015</blockquote></a>
+				<p class="news"><span></span>The transition from traditional cable and satellite TV service to online streaming is not without its issues, as Dish’s Sling TV subscribers can attest to. The web-based streaming platform experienced a significant outage last night its third sizable outage to date which brought the service down for hours. The issue affected users across platforms, including web...</p>
+				<a href="" class="more-news">See more...</a>
+				</div>
+
+		<div class="novelty">
+				<h2 class="name-news-m"><a href="#">Sling TV’s Web-Based Streaming Service Experienced
+Third Major Outage On Monday</a></h2>
+				<a href="#"><blockquote class="newsinform">techcrunch.com 30.6.2015</blockquote></a>
+				<p class="news"><span></span>The transition from traditional cable and satellite TV service to online streaming is not without its issues, as Dish’s Sling TV subscribers can attest to. The web-based streaming platform experienced a significant outage last night its third sizable outage to date which brought the service down for hours. The issue affected users across platforms, including web...</p>
+				<a href="" class="more-news">See more...</a>
+
+		</div>
+		<div class="novelty">
+				<h2 class="name-news-m"><a href="#">Sling TV’s Web-Based Streaming Service Experienced
+Third Major Outage On Monday</a></h2>
+				<a href="#"><blockquote class="newsinform">techcrunch.com 30.6.2015</blockquote></a>
+				<p class="news"><span></span>The transition from traditional cable and satellite TV service to online streaming is not without its issues, as Dish’s Sling TV subscribers can attest to. The web-based streaming platform experienced a significant outage last night its third sizable outage to date which brought the service down for hours. The issue affected users across platforms, including web...</p>
+				<a href="" class="more-news">See more...</a>
+		</div>
+
+	</div>
 </body>
 </html>
