--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,35 +9,6 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:700&subset=latin,cyrillic-ext,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Lora&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript">
-(function (d, w, c) {
-    (w[c] = w[c] || []).push(function() {
-        try {
-            w.yaCounter26600358 = new Ya.Metrika({id:26600358,
-                    webvisor:true,
-                    clickmap:true,
-                    trackLinks:true,
-                    accurateTrackBounce:true});
-
-            w.counter = w.yaCounter26600358;
-        } catch(e) { }
-    });
-
-    var n = d.getElementsByTagName("script")[0],
-        s = d.createElement("script"),
-        f = function () { n.parentNode.insertBefore(s, n); };
-    s.type = "text/javascript";
-    s.async = true;
-    s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
-
-    if (w.opera == "[object Opera]") {
-        d.addEventListener("DOMContentLoaded", f, false);
-    } else { f(); }
-})(document, window, "yandex_metrika_callbacks");
-</script>
-<noscript><div><img src="//mc.yandex.ru/watch/26600358" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
 </head>
 <body>
 <div id="pc-container">
@@ -130,27 +101,6 @@
 
 			</div>
 			<div class="center-content clearfix">
-				<div class="novelty">
-				<h2 class="name-news"><a href="#">Sling TV’s Web-Based Streaming Service Experienced
-Third Major Outage On Monday</a></h2>
-				<a href="#"><blockquote class="newsinform">techcrunch.com 30.6.2015</blockquote></a>
-				<p class="news"><span></span>The transition from traditional cable and satellite TV service to online streaming is not without its issues, as Dish’s Sling TV subscribers can attest to. The web-based streaming platform experienced a significant outage last night its third sizable outage to date which brought the service down for hours. The issue affected users across platforms, including web...</p>
-				<a href="" class="more-news">See more...</a>
-				</div>
-				<div class="novelty">
-				<h2 class="name-news"><a href="#">Sling TV’s Web-Based Streaming Service Experienced
-Third Major Outage On Monday</a></h2>
-				<a href="#"><blockquote class="newsinform">techcrunch.com 30.6.2015</blockquote></a>
-				<p class="news"><span></span>The transition from traditional cable and satellite TV service to online streaming is not without its issues, as Dish’s Sling TV subscribers can attest to. The web-based streaming platform experienced a significant outage last night its third sizable outage to date which brought the service down for hours. The issue affected users across platforms, including web...</p>
-				<a href="" class="more-news">See more...</a>
-				</div>
-				<div class="novelty">
-				<h2 class="name-news"><a href="#">Sling TV’s Web-Based Streaming Service Experienced
-Third Major Outage On Monday</a></h2>
-				<a href="#"><blockquote class="newsinform">techcrunch.com 30.6.2015</blockquote></a>
-				<p class="news"><span></span>The transition from traditional cable and satellite TV service to online streaming is not without its issues, as Dish’s Sling TV subscribers can attest to. The web-based streaming platform experienced a significant outage last night its third sizable outage to date which brought the service down for hours. The issue affected users across platforms, including web...</p>
-				<a href="" class="more-news">See more...</a>
-				</div>
 			</div>
 
 			<div class="dictionaries-section clearfix">
@@ -372,39 +322,38 @@ Third Major Outage On Monday</a></h2>
 
 			</div>
 		</div>
-
-			<div class="novelty">
-				<h2 class="name-news-m"><a href="#">Sling TV’s Web-Based Streaming Service Experienced
-Third Major Outage On Monday</a></h2>
-				<a href="#"><blockquote class="newsinform">techcrunch.com 30.6.2015</blockquote></a>
-				<p class="news"><span></span>The transition from traditional cable and satellite TV service to online streaming is not without its issues, as Dish’s Sling TV subscribers can attest to. The web-based streaming platform experienced a significant outage last night its third sizable outage to date which brought the service down for hours. The issue affected users across platforms, including web...</p>
-				<a href="" class="more-news">See more...</a>
-				</div>
-
-		<div class="novelty">
-				<h2 class="name-news-m"><a href="#">Sling TV’s Web-Based Streaming Service Experienced
-Third Major Outage On Monday</a></h2>
-				<a href="#"><blockquote class="newsinform">techcrunch.com 30.6.2015</blockquote></a>
-				<p class="news"><span></span>The transition from traditional cable and satellite TV service to online streaming is not without its issues, as Dish’s Sling TV subscribers can attest to. The web-based streaming platform experienced a significant outage last night its third sizable outage to date which brought the service down for hours. The issue affected users across platforms, including web...</p>
-				<a href="" class="more-news">See more...</a>
-				</div>
-
-		<div class="novelty">
-				<h2 class="name-news-m"><a href="#">Sling TV’s Web-Based Streaming Service Experienced
-Third Major Outage On Monday</a></h2>
-				<a href="#"><blockquote class="newsinform">techcrunch.com 30.6.2015</blockquote></a>
-				<p class="news"><span></span>The transition from traditional cable and satellite TV service to online streaming is not without its issues, as Dish’s Sling TV subscribers can attest to. The web-based streaming platform experienced a significant outage last night its third sizable outage to date which brought the service down for hours. The issue affected users across platforms, including web...</p>
-				<a href="" class="more-news">See more...</a>
-
-		</div>
-		<div class="novelty">
-				<h2 class="name-news-m"><a href="#">Sling TV’s Web-Based Streaming Service Experienced
-Third Major Outage On Monday</a></h2>
-				<a href="#"><blockquote class="newsinform">techcrunch.com 30.6.2015</blockquote></a>
-				<p class="news"><span></span>The transition from traditional cable and satellite TV service to online streaming is not without its issues, as Dish’s Sling TV subscribers can attest to. The web-based streaming platform experienced a significant outage last night its third sizable outage to date which brought the service down for hours. The issue affected users across platforms, including web...</p>
-				<a href="" class="more-news">See more...</a>
-		</div>
-
 	</div>
+			<script src="/js/myapp.js"/>
+	<!-- Yandex.Metrika counter -->
+
+<script type="text/javascript">
+(function (d, w, c) {
+    (w[c] = w[c] || []).push(function() {
+        try {
+            w.yaCounter26600358 = new Ya.Metrika({id:26600358,
+                    webvisor:true,
+                    clickmap:true,
+                    trackLinks:true,
+                    accurateTrackBounce:true});
+
+            w.counter = w.yaCounter26600358;
+        } catch(e) { }
+    });
+
+    var n = d.getElementsByTagName("script")[0],
+        s = d.createElement("script"),
+        f = function () { n.parentNode.insertBefore(s, n); };
+    s.type = "text/javascript";
+    s.async = true;
+    s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
+
+    if (w.opera == "[object Opera]") {
+        d.addEventListener("DOMContentLoaded", f, false);
+    } else { f(); }
+})(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript><div><img src="//mc.yandex.ru/watch/26600358" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+
 </body>
 </html>
