--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -48,7 +48,7 @@
 		<div class="middle-section clearfix">
 			<div class="settings-section clearfix">
 				<div class="settings-title">
-					<h3><a href="#">My Settings</a></h3>
+					<h3 class="settings-section-title"><a href="#">My Settings</a></h3>
 				</div>
 				<div class="settings-news">
 					<h4 class="news-title">News Sources</h4>
@@ -95,7 +95,7 @@
 
 				</div>
 				<div class="settings-lang">
-					<h4><a href="#">Native language</a></h4>
+					<h4><a href="#" class="settings-lang-link">Native language</a></h4>
 					<p class="lang">Russian</p>
 				</div>
 
