--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,6 +40,8 @@
 					<li><a href="#">style</a></li>
 					<li><a href="#">travel</a></li>
 					<li><a href="#">money</a></li>
+                    <li><a href="#">money</a></li>
+                    <li><a href="#">money</a></li>
 				</ul>
 			</div>
 			</div>
@@ -242,6 +244,7 @@
 					<p class="word">Выделите слово и увидите его перевод</p>
 				</div>
 				<div class="close">123</div>
+            12312312312512312312512423413523413512344512545124e5615789563
 
 
 		</div>
